kubernetes/jenkins/helm/jenkins-ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: jenkins
  name: jenkins
spec:
  ingressClassName: "nginx"
  rules:
    - host: jenkins.labz.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins
                port:
                  number: 80
